--- a/evaluation/tutorials/nwm_streamflow/02_Analysis_StdSuite.html
+++ b/evaluation/tutorials/nwm_streamflow/02_Analysis_StdSuite.html
@@ -482,7 +482,7 @@ rechunking-tutorial-cloud
 <p>The above list represents the processed datasets available for benchmarking.  If a dataset
 you want is not in that list,
 you can load the data manually via direct connection to ‘on-prem’ or S3 object storage.
-If you load data from a source other than this list, you can jump to <span class="xref myst">Step 2: Restrict to a Domain</span></p>
+If you load data from a source other than this list, you can jump to Step 2: Restrict to a Domain</p>
 <p>Note that the interesting datasets in the cataloged dataset above are duplicated: Some are <code class="docutils literal notranslate"><span class="pre">-onprem</span></code>
 and some are <code class="docutils literal notranslate"><span class="pre">-cloud</span></code>. Same data, but the storage location and access protocol will be different. You
 will definitely want to use the correct copy of the data for your computing environment.</p>
