add point selection from CONUS404

--- a/environment_set_up/StartScript.html
+++ b/environment_set_up/StartScript.html
@@ -417,8 +417,7 @@ if you would like to set up your own environment using this start script.  The c
 is built using <a class="reference download internal" download="" href="../_downloads/4c0a14e6bc9d08935ee4b2edae0d206b/HyTEST.yml"><span class="xref download myst">this</span></a> environment definition. We recommend that you
 use it as the baseline if you will be building your own environment.</p>
 <p>If you choose to do that, you will want to edit the <code class="docutils literal notranslate"><span class="pre">jupyter-start.sh</span></code> script to reflect
-the particulars of your custom conda environment.  See <span class="xref myst">here</span> for
-an example walk-through of that process.</p>
+the particulars of your custom conda environment.</p>
 </section>
 
     <script type="text/x-thebe-config">
